--- a/Firmware/LoRaTxNode/LoraTxNode.ioc
+++ b/Firmware/LoRaTxNode/LoraTxNode.ioc
@@ -7,22 +7,25 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
-Mcu.IPNb=5
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PH0-OSC_IN
-Mcu.Pin10=PB9
-Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin10=PB5
+Mcu.Pin11=PB8
+Mcu.Pin12=PB9
+Mcu.Pin13=VP_SYS_VS_Systick
 Mcu.Pin2=PH1-OSC_OUT
 Mcu.Pin3=PA0-WKUP
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PB3
-Mcu.Pin8=PB5
-Mcu.Pin9=PB8
-Mcu.PinsNb=12
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB3
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -43,6 +46,10 @@ PA0-WKUP.GPIOParameters=PinState
 PA0-WKUP.Locked=true
 PA0-WKUP.PinState=GPIO_PIN_RESET
 PA0-WKUP.Signal=GPIO_Output
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PA5.GPIOParameters=GPIO_Speed
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA5.Locked=true
@@ -107,7 +114,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=32000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -161,6 +168,8 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+USART2.IPParameters=VirtualMode
+USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
